# polyp_ui

./: .gitignore  README.md  colonoscopy_management.db  pyproject.toml  ttt
src/polyp_ui/: app.py  database.py  db_management.py  jpg_seq_to_mp4.py
src/polyp_ui/notebooks/: decolonsegnet_training.ipynb  yolo_detector.ipynb
