[project]
name = "polyp_ui"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Abdelrhman Nile", email = "abdelrhmannile@gmail.com"},
]
dependencies = [
    "opencv-python>=4.9.0.80",
    "gradio>=4.19.2",
    "ultralytics>=8.1.29",
    "ipykernel>=6.29.3",
    "supervision>=0.19.0",
    "dill>=0.3.8",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
